# Sistema-de-Monitoramento-de-Consumo-de-gua

./: CMakeLists.txt  README.md
include/: Bridge.h  Decorator.h  FactoryMethod.h  MonitoramentoFacade.h  Observer.h  Singleton.h
src/: ModuloMonitoramento.cpp  SistemaCompleto.cpp  main.cpp
